[package]
name = "cryptopals"
version = "0.1.0"
authors = ["rrokkam <rohithrokkam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "1.0"
base64 = "0.12"
openssl = "0.10"

[dev-dependencies]
hex-literal = "0.2"
hex = "0.4"
